Update all UI and fixed data response

--- a/src/app/components/add-certificate/add-certificate.component.html
+++ b/src/app/components/add-certificate/add-certificate.component.html
@@ -8,7 +8,7 @@
             <div class="col">
               <h3 class="d-flex align-items-center"> <a style="position: relative;" href="javascript:void(0)" (click)="goBack()"  class="back p-2 px-3 d-inline-block border rounder mr-3 btn btn-default"><i class="fas fa-arrow-left"></i></a>  Add New Certificate Template</h3>
             </div>
-            <div class="col-auto">
+            <div class="col-md-auto">
               <div class="btn-group">
                 <button style="min-width: auto;" [routerLink]="'/Certificates'" class="btn-orange-outline export mr-2">
                   Cancel
