--- a/src/app/components/jobs/jobs.component.html
+++ b/src/app/components/jobs/jobs.component.html
@@ -156,7 +156,7 @@
               <button class="btn-orange-outline add_certificate" (click)="generateCertificateTemplate()">
                 <i class="fas fa-plus"></i> Add New Certificate Template
               </button>
-              <div class="table-container mt-5">
+              <div class="table-container mt-5 certificate_templates_wrap_Box">
                 <div class="row certificate_templates_wrap">
                   <div class="col-small" *ngFor="let element of templatesData;">
                     <div class="certificateSingle">
