fix prod build error

--- a/src/app/components/admin-profile/admin-profile.component.html
+++ b/src/app/components/admin-profile/admin-profile.component.html
@@ -1,5 +1,5 @@
 <!--<app-navbar></app-navbar>-->
-<div class="container mt-6">
+<div class="container mt-6" *ngIf="admin">
   <div class="profile-area">
     <app-errors></app-errors>
     <div class="profile-header row  align-items-center">
