--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -22,24 +22,24 @@
         </div>
         <a href="javascript:void(0)" (click)="goBack()" class="back p-3 d-inline-block border rounder btn btn-light"><i
             class="fas fa-arrow-left"></i></a>
+            
+        <div class="form-group details_tab_action d-flex" *ngIf="selectedTab === 0">
+          <button class="btn-orange-outline export" (click)="Cancel()">
+            Discard Changes
+          </button>
+
+          <button class="btn-orange-outline save ml-3" (click)="update()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="22.415" height="12.594" viewBox="0 0 22.415 12.594">
+              <path id="Path_58" data-name="Path 58"
+                d="M17.3,6.3a1,1,0,0,0-1.41,0l-5.64,5.64,1.41,1.41L17.3,7.7a1,1,0,0,0,0-1.4Zm4.24-.01-9.88,9.88L8.18,12.7a1,1,0,0,0-1.41,1.41l4.18,4.18a1,1,0,0,0,1.41,0L22.95,7.71a1,1,0,0,0,0-1.41h-.01a.975.975,0,0,0-1.4-.01ZM1.12,14.12,5.3,18.3a1,1,0,0,0,1.41,0l.7-.7L2.53,12.7a1,1,0,0,0-1.41,0,1.008,1.008,0,0,0,0,1.42Z"
+                transform="translate(-0.828 -5.999)" fill="#fff" />
+            </svg>
+            Save Changes</button>
+        </div>
         <mat-tab-group class="mat-group-content" [selectedIndex]="selectedTab"
           (selectedTabChange)="handleTabChange($event)">
           <mat-tab label="Details">
             <form *ngIf="updateForm" [formGroup]="updateForm" class="profile-update-form">
-
-              <div class="form-group details_tab_action d-flex">
-                <button class="btn-orange-outline export" (click)="Cancel()">
-                  Discard Changes
-                </button>
-
-                <button class="btn-orange-outline save ml-3" (click)="update()">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="22.415" height="12.594" viewBox="0 0 22.415 12.594">
-                    <path id="Path_58" data-name="Path 58"
-                      d="M17.3,6.3a1,1,0,0,0-1.41,0l-5.64,5.64,1.41,1.41L17.3,7.7a1,1,0,0,0,0-1.4Zm4.24-.01-9.88,9.88L8.18,12.7a1,1,0,0,0-1.41,1.41l4.18,4.18a1,1,0,0,0,1.41,0L22.95,7.71a1,1,0,0,0,0-1.41h-.01a.975.975,0,0,0-1.4-.01ZM1.12,14.12,5.3,18.3a1,1,0,0,0,1.41,0l.7-.7L2.53,12.7a1,1,0,0,0-1.41,0,1.008,1.008,0,0,0,0,1.42Z"
-                      transform="translate(-0.828 -5.999)" fill="#fff" />
-                  </svg>
-                  Save Changes</button>
-              </div>
               <div class="row">
                 <div class="col-xl-4">
                   <div class="custom-group">
@@ -49,7 +49,7 @@
 
                   <div class="custom-group">
                     <label>Email</label>
-                    <input class="custom-form-control" type="text" placeholder="Email" formControlName="email">
+                    <input class="custom-form-control" type="text" placeholder="Email" formControlName="email" disabled>
                   </div>
 
                   <div class="custom-group">
@@ -67,7 +67,7 @@
                     <input class="custom-form-control" type="text" placeholder="Mobile" formControlName="mobile">
                   </div>
 
-                  <div class="custom-group mb-0" *>
+                  <div class="custom-group mb-0" *ngIf="user.userTags">
                     <label>Tags</label>
                     <ul>
                       <li *ngFor="let tag of user.userTags">{{tag}}</li>
