--- a/src/app/components/custom-pagination/custom-pagination.component.html
+++ b/src/app/components/custom-pagination/custom-pagination.component.html
@@ -1,17 +1,20 @@
 <div class="pagination-area">
   <div class="row align-items-center" *ngIf="page">
-    <div class="col" style="float: right;">Showing {{ (page.number * page.size) + 1   }}
-    - {{ (page.number * page.size) + page.numberOfElements }} of {{page.totalElements}}</div>
+    <div class="col" style="float: right;">
+      Showing {{ page.number+1   }}
+    - {{ ((page.number+1) * page.size) }} of {{page.totalElements}}
+    <span class="ml-1">{{pageName}}</span>
+    </div>
 
     <nav class="col-auto" aria-label="Page navigation example">
       <ul class="pagination mb-0">
 
-        <li class="page-item" [ngClass]="{'disabled': page.last }">
-          <a class="page-link" [routerLink]="" (click)="nextPage()"> <i class="fas fa-chevron-left"></i>
+        <li class="page-item first"  [ngClass]="{'disabled': page.first }">
+          <a class="page-link" [routerLink]=""  (click)="previousPage($event)"> <i class="fas fa-chevron-left"></i>
         </a></li>
 
-        <li class="page-item" [ngClass]="{'disabled': page.first }">
-          <a class="page-link" [routerLink]=""  (click)="previousPage()"> <i class="fas fa-chevron-right"></i>
+        <li class="page-item last" [ngClass]="{'disabled': page.last }">
+          <a class="page-link" [routerLink]=""  (click)="nextPage($event)"> <i class="fas fa-chevron-right"></i>
         </a></li>
 
       </ul>
