--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -10,7 +10,7 @@
               Tag is updated successfully.
             </div>
             <div class="col-auto">
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert($event)">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -23,7 +23,7 @@
               Tag Already Exists.
             </div>
             <div class="col-auto">
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert($event)">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -36,7 +36,7 @@
               Field is deleted successfully.
             </div>
             <div class="col-auto">
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert($event)">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -49,7 +49,7 @@
               Field Already Exists.
             </div>
             <div class="col-auto">
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert($event)">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -75,7 +75,7 @@
               Field is added successfully.
             </div>
             <div class="col-auto">
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="closeAlert($event)">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -122,7 +122,7 @@
                       </ng-container>
                       <ng-container matColumnDef="created_on">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
-                          <h6>Created On</h6>
+                          <h6>Created</h6>
                         </th>
                         <td mat-cell *matCellDef="let element let rowIndex = index">
                           {{element.created_at|dateAgo}} </td>
@@ -152,7 +152,7 @@
                       </tr>
                     </table>
                   </div>
-                  <app-custom-pagination [page]="tagsPage" (nextPageEvent)="getNextTagsPage()"
+                  <app-custom-pagination [page]="tagsPage" pageName="Tags" (nextPageEvent)="getNextTagsPage()"
                     (previousPageEvent)="getPreviousTagsPage()"></app-custom-pagination>
                 </div>
               </form>
@@ -172,7 +172,7 @@
                       </ng-container>
                       <ng-container matColumnDef="created_on">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
-                          <h6>Created On</h6>
+                          <h6>Created</h6>
                         </th>
                         <td mat-cell *matCellDef="let element let rowIndex = index">{{element.created_at|dateAgo}}</td>
 
@@ -215,7 +215,7 @@
                       </tr>
                     </table>
                   </div>
-                  <app-custom-pagination [page]="fieldsPage" (nextPageEvent)="getNextFieldsPage()"
+                  <app-custom-pagination [page]="fieldsPage" pageName="Fields" (nextPageEvent)="getNextFieldsPage()"
                     (previousPageEvent)="getPreviousFieldsPage()"></app-custom-pagination>
                 </div>
               </form>
