--- a/src/app/components/dialog-overview/dialog-overview.component.html
+++ b/src/app/components/dialog-overview/dialog-overview.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="tagForm">
+<form class="customTagFrom" [formGroup]="tagForm">
   <h1 mat-dialog-title>{{title}}</h1>
   <div mat-dialog-content>
     <p>Special characters are not allowed, except underscore "_" and space</p>
@@ -9,6 +9,6 @@
   </div>
   <div mat-dialog-actions class="mb-0 justify-content-end d-flex">
     <button class="btn-orange-outline mr-2" cdkFocusInitial [disabled]="tagForm.invalid" (click)="addtag(tag.value)">Create</button>
-    <button class="btn-orange-outline export" style="min-width: auto;" (click)="onNoClick()">Cancel</button>
+    <button class="btn-orange-outline export mr-0" style="min-width: auto;" (click)="onNoClick()">Cancel</button>
   </div>
 </form>
