--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,14 +23,15 @@
                     <form class="auth-form" [formGroup]="loginForm">
                         <div class="form-step" [ngClass]="{active: step == 'login'}">
                             <div class="form-group mb-3">
-                                <div class="text-danger mb-2" *ngIf="showError">{{message}}</div>
                                 <input type="email" name="email" formControlName="email" class="form-control"
                                     placeholder="Your registered email address" />
+                                
+                                <div class=" alert alert-danger px-3 py-1 mt-2" *ngIf="showError">{{message}}</div>
+                                
                             </div>
                         </div>
 
                         <div class="form-step" [ngClass]="{active: step == 'otp'}">
-                            <div class="text-danger mb-2" *ngIf="showError">{{message}}</div>
                             <div class="form-group otp-container" formGroupName="otp">
                                 <input #formRow type="text" formControlName="input1" class="form-control otp-field"
                                     placeholder="--" maxlength="1" (keyup)="keyUpEvent($event, 0)" />
@@ -45,6 +46,8 @@
                                 <input #formRow type="text" formControlName="input6" class="form-control otp-field"
                                     placeholder="--" maxlength="1" (keyup)="keyUpEvent($event, 5)" />
                             </div>
+                            <div class="alert alert-danger px-3 py-1 mt-2" *ngIf="showError">{{message}}</div>
+
                         </div>
 
                         <div class="form-group">
