--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -7,12 +7,12 @@
 }
 
 .link_header {
-  position: relative;
+  /* position: relative; */
   background: url(/assets/shape-with-border.svg);
   width: 100%;
   height: 133px;
   padding-bottom: 4%;
-  z-index: 2;
+  z-index: 200000;
   background-repeat: no-repeat;
 }
 
@@ -262,6 +262,7 @@
 */
 
 @media (max-width: 990px) {
+
   .link_header {
     padding-bottom: 0;
     border-bottom: 7px solid #FF3A00;
@@ -270,5 +271,11 @@
   }
   .link_header .navbar-brand .logo {
     left: 0;
+  }
+}
+
+@media (max-width: 766px) {
+  .link_header {
+    position: relative;
   }
 }
