--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg link_header mb-5">
+<nav class="navbar navbar-expand-lg link_header mb-5 sticky-top">
   <div class="container">
     <div class="navbar-brand">
       <a class="logo" [routerLink]="'/'">
