--- a/src/app/components/recipients/recipients.component.html
+++ b/src/app/components/recipients/recipients.component.html
@@ -259,7 +259,7 @@
                           </div>
                         </li>
                       </ul>
-                      <a [routerLink]="'/Profile/'+element.id" class="view-link btn-orange-outline-border">View</a>
+                      <a [routerLink]="'/Profile/'+element.id" class="view-link btn-orange-outline-border">View Details</a>
                     </mat-chip-list>
                   </td>
                 </ng-container>
@@ -327,7 +327,7 @@
                           </div>
                         </li>
                       </ul>
-                      <a [routerLink]="'/Profile/'+element.id" class="view-link btn-orange-outline-border">View</a>
+                      <a [routerLink]="'/Profile/'+element.id" class="view-link btn-orange-outline-border">View Details</a>
                     </mat-chip-list>
                   </td>
                 </ng-container>
