--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -164,12 +164,6 @@
                     <table matSort (matSortChange)="sortData($event, 'fields')" mat-table
                       [dataSource]="fieldsDataSource"
                       class="table hoverEffect table-header table-bordered table-rounded">
-                      <ng-container matColumnDef="fields">
-                        <th mat-header-cell *matHeaderCellDef>
-                          <h6>Fields</h6>
-                        </th>
-                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
-                      </ng-container>
                       <ng-container matColumnDef="created_on">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
                           <h6>Created</h6>
@@ -177,18 +171,40 @@
                         <td mat-cell *matCellDef="let element let rowIndex = index">{{element.created_at|dateAgo}}</td>
 
                       </ng-container>
+                      <ng-container matColumnDef="fields">
+                        <th mat-header-cell *matHeaderCellDef>
+                          <h6>Fields  
+                            <button mat-raised-button
+                            matTooltip="Info about the action"
+                            matTooltipClass="example-tooltip-red"
+                            aria-label="Button that shows a red tooltip"
+                            class="example-button">
+                      Red-tooltip Action
+                    </button>
+
+                          </h6>
+                        </th>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
+                      </ng-container>
+
                       <ng-container matColumnDef="recipients_filled">
                         <th mat-header-cell *matHeaderCellDef>
-                          <h6>Recipients filled</h6>
+                          <h6>Recipients filled
+
+                          </h6>
                         </th>
-                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.recipient_filled}}</td>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">
+                          <a class="index_up" routerLink="/recipientsFileds">{{element.recipient_filled}}</a>
+                        </td>
                       </ng-container>
 
                       <ng-container matColumnDef="recipients_empty">
                         <th mat-header-cell *matHeaderCellDef>
                           <h6>Recipients empty</h6>
                         </th>
-                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.recipient_empty}}</td>
+                        <td mat-cell *matCellDef="let element let rowIndex = index">
+                          <a class="index_up" routerLink="/recipientsFileds">{{element.recipient_empty}}</a>
+                        </td>
                       </ng-container>
 
                       <ng-container matColumnDef="view_users">
